/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.client.server;

import "google/protobuf/field_mask.proto";
import "src/devtools/mobileharness/infra/client/server/proto/session.proto";

option java_package = "com.google.devtools.mobileharness.infra.client.server.proto";
option java_outer_classname = "SessionServiceProto";
option use_java_stubby_library = true;

service SessionService {
  // Creates a session.
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);

  // Gets information of a session.
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
}

message CreateSessionRequest {
  // Required.
  SessionConfig session_config = 1;
}

message CreateSessionResponse {
  // Required.
  SessionId session_id = 1;
}

message GetSessionRequest {
  // Required.
  SessionId session_id = 1;

  // Optional.
  //
  // Field mask of GetSessionResponse.
  //
  // For example, a mask ["session_detail.session_status"] makes the response
  // only contains SessionStatus.
  //
  // If not present, the response contains all fields.
  google.protobuf.FieldMask field_mask = 2;
}

message GetSessionResponse {
  // Required.
  SessionDetail session_detail = 1;
}